# data_inheritance

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  edit_actions.c  edit_actions.h  edit_gradient.c  edit_gradient.h  edit_nodes.c  edit_nodes.h  edit_shape.c  edit_shape.h  edit_tags.c  edit_tags.h  edit_todos.c  edit_todos.h  imgui_utils.c  imgui_utils.h  main.c  utils.c  utils.h
